# dupdupninja-v2

./: .gitignore  AGENTS.md  BUILDING.md  Cargo.toml  README.md
.github/: README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  web.rs
crates/core/: Cargo.toml
crates/core/src/: db.rs  drive.rs  error.rs  hash.rs  lib.rs  models.rs  scan.rs  video.rs
crates/ffi/: Cargo.toml  build.rs
crates/ffi/include/: dupdup.h  dupdupninja.h
crates/ffi/src/: lib.rs
crates/ui-gtk/: Cargo.toml  README.md
crates/ui-gtk/src/: main.rs
crates/ui-gtk/src/ui/: files_list.rs  mod.rs  state.rs
crates/ui-macos/: Cargo.toml
crates/ui-macos/src/: main.rs
crates/ui-windows/: Cargo.toml  README.md
crates/ui-windows/src/: main.rs
docs/: future_face_recognition.md  todo_windows_version.md
macos/DupdupCore/: Package.swift  README.md
macos/DupdupCore/Sources/CDupdup/include/: dupdup.h
macos/DupdupCore/Sources/DupdupCore/: DupdupCore.swift
macos/DupdupNinjaCore/: Package.swift  README.md
macos/DupdupNinjaCore/Sources/CDupdupNinja/include/: dupdupninja.h
macos/DupdupNinjaCore/Sources/DupdupNinjaApp/: DupdupNinjaApp.swift
macos/DupdupNinjaCore/Sources/DupdupNinjaApp/Resources/: dupdupninja.icns
macos/DupdupNinjaCore/Sources/DupdupNinjaCore/: DupdupNinjaCore.swift
packaging/linux/: appimage-builder.yml  dupdupninja.desktop
windows/App4/: App4.slnx
windows/App4/App4/: AboutWindow.xaml  AboutWindow.xaml.cs  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  SettingsWindow.xaml  SettingsWindow.xaml.cs
windows/DupdupNinjaWinUI/: DupdupNinjaWinUI.sln  DupdupNinjaWinUI.slnx  README.md
windows/DupdupNinjaWinUI/DupdupNinjaWinUI/: AboutWindow.xaml  AboutWindow.xaml.cs  App.xaml  App.xaml.cpp  App.xaml.cs  App.xaml.h  DiagnosticLog.cs  DupdupNinjaWinUI.csproj  DupdupNinjaWinUI.vcxproj  DupdupNinjaWinUI.vcxproj.filters  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.cs  MainWindow.xaml.h  NativeMethods.cs  Package.appxmanifest  SettingsWindow.xaml  SettingsWindow.xaml.cs  app.manifest  main.cpp  pch.h
windows/DupdupNinjaWinUI/DupdupNinjaWinUI/Properties/: launchSettings.json
windows/DupdupNinjaWinUI/DupdupNinjaWinUI/Services/: AppSettings.cs  AppSettingsStore.cs  FilesetExactGroup.cs  FilesetMetadataModel.cs  FilesetResultRow.cs  OpenFilesetItem.cs  OpenFilesetsStore.cs  SnapshotInfoModel.cs  WinUiDataAdapter.cs
windows/DupdupWinUI/: DupdupWinUI.sln  README.md
windows/DupdupWinUI/DupdupWinUI/: App.xaml  App.xaml.cs  DupdupWinUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
