[package]
name = "dupdupninja-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "dupdupninja"
path = "src/main.rs"

[dependencies]
dupdupninja-core = { path = "../core" }
dirs = "5"
axum = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
ratatui = "0.29"
crossterm = "0.28"
