[package]
name = "dupdupninja-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = "1"
infer = "0.16"
image = { version = "0.24", default-features = false, features = ["avif", "jpeg", "png"] }
image_hasher = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
wait-timeout = "0.2"
walkdir = "2"
