[package]
name = "dupdupninja-ui-gtk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "dupdupninja-ui-gtk"
path = "src/main.rs"

[dependencies]
dupdupninja-core = { path = "../core" }
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["avif", "png"] }

[features]
gtk = ["dep:gtk4", "dep:adw"]

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = { version = "0.9", optional = true, features = ["v4_16"] }
adw = { package = "libadwaita", version = "0.7", optional = true, features = ["v1_6"] }
