[package]
name = "dupdup-ui-windows"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "dupdup-ui-windows"
path = "src/main.rs"

[dependencies]
dupdup-core = { path = "../core" }

[features]
winui = ["dep:windows"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", optional = true, features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

